--- a/app/styles/sidr.less
+++ b/app/styles/sidr.less
@@ -27,6 +27,7 @@
   left: @sidr-hide-width;
   right: auto;
   height: 100%;
+  padding-right: 2vw  ;
 }
 
 
